# sian-process-intelligence

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  requirements.txt
adrs/: 001-repositorio-dedicado-process-intelligence.md  002-bigquery-dbt-fundacao-analitica.md  003-event-log-universal-modelo-central.md  004-pm4py-framework-process-mining.md  005-simpy-motor-simulacao.md  006-ia-camada-interpretacao-recomendacao.md  007-arquitetura-desacoplada-cortex.md  008-processo-inicial-contas-a-pagar.md  009-camada-semantica-minima-iterativa.md  010-separacao-case-base-event-log-analise.md  README.md
config/: README.md  domains.yaml
data/others/: README.md
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: cp_case_id.sql  cp_event_order.sql
dbt/models/staging/: stg_fk2.sql  stg_fk7.sql  stg_se2.sql  stg_se5.sql
dbt/tests/: assert_cp_cancelado_has_titulo_cancelado.sql  assert_cp_case_base_inferido_consistency.sql  assert_cp_case_base_tem_se5_consistency.sql  assert_cp_event_log_exactly_one_titulo_criado.sql  assert_cp_pago_has_terminal_event.sql
docs/: ai-integration.md  ai-strategy.md  architecture.md  config-lab.md  domain-contas-a-pagar.md  glossary.md  inventory-src-app.md  investigacao-fluxos-pago-sem-se5.md  local-lab-duckdb.md  next-steps.md  process-intelligence.md  process-mining-analise-semantica.md  roadmap.md  schema-parquet-vs-sql-report.md  vision.md
docs/adrs/: ADR-011-core-architecture-src-app.md  README.md
docs/contracts/: contas_a_pagar_process_intelligence.md
notebooks/: 00_process_intelligence_walkthrough.ipynb  README.md
prompts/: README.md  prompt_bottleneck_analysis.md  prompt_event_mapping.md  prompt_executive_summary.md  prompt_process_analyst.md  prompt_sql_copilot.md
python/: __init__.py
python/ai/: analysis.py  recommendations.py
python/connectors/: event_log_reader.py
python/local_lab/: __init__.py  config.py  extract_bigquery_to_parquet.py  load_parquet_to_duckdb.py  materialize_cp_case_base.py  materialize_cp_event_log.py  materialize_cp_event_log_semantic.py
python/mining/: bottlenecks.py  discovery.py  variants.py
python/simulation/: scenarios.py
python/sx3/: __init__.py  relationship_inferer.py  sx3_loader.py
python/utils/: __init__.py
python/validation/: __init__.py  dbt_alignment.py  domain_config.py  event_log_builder.py  llm_enrichment.py  process_flow.py
scripts/: README.md  _bootstrap.py  build_process_flow.py  infer_events_from_sx3.py  infer_relationships_from_sx3.py  investigate_pago_sem_se5_flows.py  process_mining_analysis.py  process_mining_semantic_analysis.py  report_parquet_schema_vs_sql.py  run_discovery.py  run_local_lab.sh  run_mining_example.sh  run_model.py  run_pipeline.py  run_process.py  run_validation.py  validate_contract_alignment.py  validate_cp_event_log_semantic.py
sql/marts/: cp_case_base.sql  cp_event_log.sql  cp_event_log_semantic.sql
src/app/: README.md  __init__.py  paths.py
src/app/ai/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_column_role.py  test_core_schemas.py  test_dbt_alignment.py  test_event_log_builder.py  test_process_flow.py  test_relationship_inferer.py  test_sx3_loader.py
(+50 files in other folders)
